Issue 352 Set page background color to white.
The increased header contrast sort made the yellow tinted
background color look out of place.

--- a/themes/elmcip/css/html-reset.css
+++ b/themes/elmcip/css/html-reset.css
@@ -27,7 +27,6 @@
  */
 body {
   font-size: 100%; /* Fixes exaggerated text resizing in IE6 and IE7 */
-  color: #333333;
 }
 
 #skip-to-nav,
