--- a/themes/elmcip/css/layout-fixed.css
+++ b/themes/elmcip/css/layout-fixed.css
@@ -25,10 +25,6 @@
  * 6 col (50%) = 460px
  */
 
-body {
-  background-color: #F3F2EA;
-}
-
 #page-wrapper,
 .region-bottom {
   /*
